    PyArg_Parse() after running the simple callback pulse(), there can be
    an exception on the stack, which must be cleared.  (LP: #711225)

  [ Michael Vogt ]
  * python/arfile.cc, apt/debfile.py:
    - add support for .xz archives
  * tests/test_debfile.py:
    - add test for xz compression
  * update priority of python3-apt to match the archive

 -- Michael Vogt <mvo@debian.org>  Mon, 21 Mar 2011 15:46:50 +0100

python-apt (0.7.100.2) unstable; urgency=low

  * apt/progress/text.py:
    - only run ioctl for termios.TIOCGWINSZ if the fd is a tty
  * apt/debfile.py, tests/test_debfile.py:
    - strip "./" from _get_content and add tests, this fixes a control
      file extraction bug in gdebi
  * python/depcache.cc:
    - when using the actiongroup as a contextmanager incref/decref
      on enter and leave. this should fix the instablity issues
      that aptdaemon runs into (LP: #691134)
  * debian/python3-apt.install:
    - fix py3 extension module install location (thanks to
      Barry)
  * python/depcache.cc:
    - provide bindings for new libapt SetCandidateRelease()
  * debian/control:
    - require new libapt-pkg-dev SetCandidateRelease()
  * py3 compatible exception handline
  * debian/control:
    - bump minimal python version to >= 2.6
  * python/apt_pkgmodule.cc:
    - strip multiarch by default in RealParseDepends
    - add optional parameter to allow parse_depends() to keep the
      multiarch parameter
  * tests/test_deps.py:
    - add test forapt_pkg.parse_depends(strip_multiarch=True)

 -- Michael Vogt <mvo@debian.org>  Mon, 21 Mar 2011 14:56:01 +0100

python-apt (0.7.100.1) unstable; urgency=low

  [ Julian Andres Klode ]
  * python/generic.h: Fix a memory leak (leaking on every unicode string).
  * debian/control: add Replaces to python-apt-common, python3-apt; to
    avoid file conflicts with files previously in python-apt (Closes: #605136).

  [ Michael Vogt ]
  * python/generic.h:
    - set Object to NULL in CppDeallocPtr